[gd_scene load_steps=3 format=3 uid="uid://perf_monitor"]

[ext_resource type="Script" path="res://scripts/ui/overlays/PerformanceMonitor.gd" id="1_perf_monitor"]
[ext_resource type="Script" path="res://scripts/ui/overlays/GraphControl.gd" id="2_graph_control"]
[ext_resource type="Theme" uid="uid://dpiqolc47bhf4" path="res://themes/bg3_theme.tres" id="3_theme"]

[node name="PerformanceMonitor" type="CanvasLayer"]
layer = 20
script = ExtResource("1_perf_monitor")

[node name="PerfPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_theme")
mouse_filter = 2

[node name="Content" type="VBoxContainer" parent="PerfPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="FPSLabel" type="Label" parent="PerfPanel/Content"]
layout_mode = 2
text = "FPS: --"
horizontal_alignment = 2

[node name="MetricsContainer" type="VBoxContainer" parent="PerfPanel/Content"]
layout_mode = 2
visible = false
theme_override_constants/separation = 5

[node name="GraphsContainer" type="HBoxContainer" parent="PerfPanel/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
visible = false
theme_override_constants/separation = 10

[node name="FPSGraph" type="Control" parent="PerfPanel/Content/GraphsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 100)
script = ExtResource("2_graph_control")

[node name="ProcessGraph" type="Control" parent="PerfPanel/Content/GraphsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 100)
script = ExtResource("2_graph_control")

[node name="RefreshGraph" type="Control" parent="PerfPanel/Content/GraphsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 100)
script = ExtResource("2_graph_control")

[node name="BottomGraphBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
visible = false
theme = ExtResource("3_theme")
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="BottomGraphBar"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BottomGraphsContainer" type="HBoxContainer" parent="BottomGraphBar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="BottomFPSGraph" type="Control" parent="BottomGraphBar/MarginContainer/BottomGraphsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 140)
script = ExtResource("2_graph_control")

[node name="BottomProcessGraph" type="Control" parent="BottomGraphBar/MarginContainer/BottomGraphsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 140)
script = ExtResource("2_graph_control")

[node name="BottomRefreshGraph" type="Control" parent="BottomGraphBar/MarginContainer/BottomGraphsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 140)
script = ExtResource("2_graph_control")

[node name="BottomThreadGraph" type="Control" parent="BottomGraphBar/MarginContainer/BottomGraphsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 140)
script = ExtResource("2_graph_control")
